
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

SET(example_name extension_browser)

FILE(GLOB_RECURSE SOURCES "*.cpp")
FILE(GLOB_RECURSE HEADERS "*.h")
FILE(GLOB_RECURSE FORMS "*.ui")
FILE(GLOB_RECURSE RESOURCES "*.qrc")
 
INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  )

ADD_EXECUTABLE(
    ${example_name} 
    ${SOURCES}
    ${HEADERS}
    ${RESOURCES}
    ${FORMS}
)

FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets REQUIRED)

TARGET_LINK_LIBRARIES(${example_name} ${PROJECT_NAME}  Qt5::Core Qt5::Gui Qt5::Widgets )




